# deno

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: docker-test.yml
cli/: build.rs
cli/tsc/dts/: lib.deno.shared_globals.d.ts
core/: bindings.rs
docker/: Dockerfile  Dockerfile.async-context  Dockerfile.async-context.builder  Dockerfile.base.builder  Dockerfile.builder  Dockerfile.unmodified  Dockerfile.unmodified.builder  README.md  build.sh  deno-build.sh  deno-setup.sh  docker-build-all.sh
docker/tests/: adapted-from-proposal.ts  additional-native-tests.ts  docker-run.sh
ext/subtext/: 00_subtext.js  Cargo.toml  README.md  lib.deno_subtext.d.ts  lib.rs
ext/web/: 02_timers.js  Cargo.toml
ext/web/benches/: encoding.rs  timers_ops.rs
runtime/: Cargo.toml  build.rs  lib.rs
runtime/js/: 98_global_scope.js
