# Copyright 2018-2023 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_subtext"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Implementation of AsyncContext proposal for Deno"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
